@@ -45,7 +45,6 @@ import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class LogValidator {
 
@@ -612,7 +611,7 @@ public class LogValidator {
 
     private static void processRecordErrors(List<ApiRecordError> recordErrors) {
         if (!recordErrors.isEmpty()) {
-            List<RecordError> errors = recordErrors.stream().map(e -> e.recordError).collect(Collectors.toList());
+            List<RecordError> errors = recordErrors.stream().map(e -> e.recordError).toList();
             if (recordErrors.stream().anyMatch(e -> e.apiError == Errors.INVALID_TIMESTAMP)) {
                 throw new RecordValidationException(new InvalidTimestampException(
                     "One or more records have been rejected due to invalid timestamp"), errors);
